Builds with java 17 (#1802)
This commit adds support for building on java 17, while leaving support for building java 11 untouched.